# sllm

./: .gitignore  AGENT.md  Cargo.toml  DECISIONS.md  FEATURES.md  README.md
deploy/: sllm-train.service
scripts/: download_code.py  download_english.py  download_twi.py  fix_twi_datasets.py  monitor.py  prepare_personal.py
sllm-cli/: Cargo.toml
sllm-cli/src/: main.rs
sllm-core/: Cargo.toml
sllm-core/src/: eval.rs  lib.rs
sllm-core/src/brain/: count_min.rs  count_table.rs  mod.rs  sampler.rs
sllm-core/src/format/: header.rs  mod.rs  reader.rs  writer.rs
sllm-core/src/rag/: index.rs  mod.rs  retriever.rs  store.rs
sllm-core/src/tokenizer/: bpe.rs  mod.rs  vocab.rs
sllm-run/: Cargo.toml
sllm-run/src/: main.rs
sllm-train/: Cargo.toml
sllm-train/src/: curriculum.rs  evaluator.rs  main.rs  progress.rs
