[workspace]
resolver = "2"
members = [
    "sllm-core",
    "sllm-train",
    "sllm-run",
    "sllm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["dancherbu"]
license = "MIT"
description = "sLLM — A gradient-free, CPU-only shallow language model"

[workspace.dependencies]
# Shared dependencies across crates
sllm-core = { path = "sllm-core" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
crc32fast = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
rand = "0.9"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde_json = "1"
byteorder = "1"
