[package]
name = "sllm-run"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "sLLM Inference Runner — Read-only, multi-model HTTP API server"

[[bin]]
name = "sllm-run"
path = "src/main.rs"

[dependencies]
sllm-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
memmap2.workspace = true
rand.workspace = true
