[package]
name = "sllm-train"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "sLLM Training Engine — Autonomous, gradient-free model trainer"

[[bin]]
name = "sllm-train"
path = "src/main.rs"

[dependencies]
sllm-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
